# Transformer

./: .gitignore  Pipfile  README.md  config.py  dataset.py  embeddings.ipynb  model.py  models.py  pyproject.toml  self_attention.ipynb  tokenizer_en.json  tokenizer_fr.json  train.py
