[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "pathlib>=1.0.1",
    "sacrebleu>=2.5.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "tokenizers>=0.21.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
